# KB-RAG-Analyzer

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  research.md
notebooks/: document-parser.ipynb
src/: demo.py  rag_pipeline.py
src/embeddings/: __init__.py  base.py  huggingface.py  openai.py  sentence_transformers.py
src/llm/: __init__.py  base.py  llamacpp.py  openai.py  transformers.py
src/parsers/: __init__.py  chunking.py  layout_analyser.py  pipeline.py
src/parsers/documents/: __init__.py  base.py  csv.py  excel.py  html.py  image.py  json.py  pdf.py  text.py  word.py  xml.py
src/parsers/types/: __init__.py  bounding_box.py  csv.py  document_element.py  document_structure.py  element_type.py  parsed_document.py
src/vector_store/: __init__.py  base.py  chroma.py  milvus.py
