[project]
name = "knowledgebase-rag-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-docling>=1.0.0",
    "langchain-openai>=0.3.27",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.3",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "ragas>=0.2.15",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
